--- a/templates/main/includes/hero.html
+++ b/templates/main/includes/hero.html
@@ -1,32 +1,52 @@
 {% load static %}
-<section id="hero" class="hero">
-    <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
+<!-- Hero Section -->
+<section id="hero" class="hero section dark-background">
 
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="{% static 'assets/img/hero-carousel/hero-carousel-1.jpg' %}"
-                     alt="Slide 1">
+    <div class="info d-flex align-items-center">
+        <div class="container">
+            <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
+                <div class="col-lg-6 text-center">
+                    <h2>Welcome to UpConstruction</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <a href="#get-started" class="btn-get-started">Get Started</a>
+                </div>
             </div>
+        </div>
+    </div>
 
-            <div class="carousel-item">
-                <img class="d-block w-100" src="{% static 'assets/img/hero-carousel/hero-carousel-2.jpg' %}"
-                     alt="Slide 2">
-            </div>
+    <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
 
-            <div class="carousel-item">
-                <img class="d-block w-100" src="{% static 'assets/img/hero-carousel/hero-carousel-3.jpg' %}"
-                     alt="Slide 3">
-            </div>
-
+        <div class="carousel-item">
+            <img src="{% static 'assets/img/hero-carousel/hero-carousel-1.jpg' %}" alt="Hero slide 1">
         </div>
 
-        <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+        <div class="carousel-item active">
+            <img src="{% static 'assets/img/hero-carousel/hero-carousel-2.jpg' %}" alt="Hero slide 2">
+        </div>
+
+        <div class="carousel-item">
+            <img src="{% static 'assets/img/hero-carousel/hero-carousel-3.jpg' %}" alt="Hero slide 3">
+        </div>
+
+        <div class="carousel-item">
+            <img src="{% static 'assets/img/hero-carousel/hero-carousel-4.jpg' %}" alt="Hero slide 4">
+        </div>
+
+        <div class="carousel-item">
+            <img src="{% static 'assets/img/hero-carousel/hero-carousel-5.jpg' %}" alt="Hero slide 5">
+        </div>
+
+        <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
+        </a>
+
+        <a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slide="next">
+            <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
+        </a>
+
     </div>
+
 </section>
+<!-- /Hero Section -->
