feat: update some files

--- a/templates/main/includes/head.html
+++ b/templates/main/includes/head.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>{% block title %}Index - UpConstruction Bootstrap Template{% endblock %}</title>
+    <title>{% block title %}DRN AHŞAP ATÖLYESİ{% endblock %}</title>
     <meta name="description" content="{% block meta_description %}{% endblock %}">
     <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
 
