--- a/templates/main/includes/header.html
+++ b/templates/main/includes/header.html
@@ -1,10 +1,10 @@
 <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
-
+{% load static %}
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">UpConstruction</h1> <span>.</span>
+        <img src="{% static 'assets/img/logo/drnahsap_logo.jpg' %}" alt="">
+        <h1 class="sitename">DRN AHŞAP ATÖLYESİ</h1> <span>.</span>
       </a>
 
       <nav id="navmenu" class="navmenu">
