--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 {% include 'main/includes/head.html' %}
 <body class="{% block body_class %}index-page{% endblock %}">
 {% include 'main/includes/header.html' %}
