--- a/templates/main/includes/hero.html
+++ b/templates/main/includes/hero.html
@@ -6,11 +6,10 @@
         <div class="container">
             <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
                 <div class="col-lg-6 text-center">
-                    <h2>Welcome to UpConstruction</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <a href="#get-started" class="btn-get-started">Get Started</a>
+                    <h2>DRN AHŞAP ATÖLYESİNE HOŞ GELDİNİZ!</h2>
+                    <p>Hayallerinizdeki mobilyaları yapmak bizim işimiz. Siz isteklerinizi belirleyin biz
+                        tasarlayalım. </p>
+                    <a href="#get-started" class="btn-get-started">Hadi başlayalım</a>
                 </div>
             </div>
         </div>
@@ -19,23 +18,27 @@
     <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item">
-            <img src="{% static 'assets/img/hero-carousel/hero-carousel-1.jpg' %}" alt="Hero slide 1">
+            <img src="{% static 'assets/img/hero-carousel/dolap1.webp' %}" alt="Hero slide 1">
         </div>
 
         <div class="carousel-item active">
-            <img src="{% static 'assets/img/hero-carousel/hero-carousel-2.jpg' %}" alt="Hero slide 2">
+            <img src="{% static 'assets/img/hero-carousel/mutfak3.webp' %}" alt="Hero slide 2">
         </div>
 
         <div class="carousel-item">
-            <img src="{% static 'assets/img/hero-carousel/hero-carousel-3.jpg' %}" alt="Hero slide 3">
+            <img src="{% static 'assets/img/hero-carousel/mutfak2.webp' %}" alt="Hero slide 3">
         </div>
 
         <div class="carousel-item">
-            <img src="{% static 'assets/img/hero-carousel/hero-carousel-4.jpg' %}" alt="Hero slide 4">
+            <img src="{% static 'assets/img/hero-carousel/mutfak1.webp' %}" alt="Hero slide 4">
         </div>
 
         <div class="carousel-item">
-            <img src="{% static 'assets/img/hero-carousel/hero-carousel-5.jpg' %}" alt="Hero slide 5">
+            <img src="{% static 'assets/img/hero-carousel/bahcemobilya.webp' %}" alt="Hero slide 5">
+        </div>
+
+        <div class="carousel-item">
+            <img src="{% static 'assets/img/hero-carousel/sahilbar.webp' %}" alt="Hero slide 6">
         </div>
 
         <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
