feat: update some files

--- a/templates/main/includes/hero.html
+++ b/templates/main/includes/hero.html
@@ -7,8 +7,7 @@
             <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
                 <div class="col-lg-6 text-center">
                     <h2>DRN AHŞAP ATÖLYESİNE HOŞ GELDİNİZ!</h2>
-                    <p>Hayallerinizdeki mobilyaları yapmak bizim işimiz. Siz isteklerinizi belirleyin biz
-                        tasarlayalım. </p>
+                    <p>Ölçünüze, tarzınıza, bütçenize özel tasarım ve üretim.</p>
                     <a href="#get-started" class="btn-get-started">Hadi başlayalım</a>
                 </div>
             </div>
