feat: update some files

--- a/templates/main/includes/blog.html
+++ b/templates/main/includes/blog.html
@@ -20,7 +20,7 @@
                         </div>
                         <div class="post-content d-flex flex-column">
                             <h3 class="post-title">Eum ad dolor et</h3>
-                            <a href="{% url 'blog_details' %}" class="readmore stretched-link"><span>Read More</span><i
+                            <a href="{% url 'main:blog_details' %}" class="readmore stretched-link"><span>Read More</span><i
                                     class="bi bi-arrow-right"></i></a>
                         </div>
                     </div>
@@ -34,7 +34,7 @@
                         </div>
                         <div class="post-content d-flex flex-column">
                             <h3 class="post-title">Et repellendus molestiae</h3>
-                            <a href="{% url 'blog_details' %}" class="readmore stretched-link"><span>Read More</span><i
+                            <a href="{% url 'main:blog_details' %}" class="readmore stretched-link"><span>Read More</span><i
                                     class="bi bi-arrow-right"></i></a>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                         </div>
                         <div class="post-content d-flex flex-column">
                             <h3 class="post-title">Quia assumenda est</h3>
-                            <a href="{% url 'blog_details' %}" class="readmore stretched-link"><span>Read More</span><i
+                            <a href="{% url 'main:blog_details' %}" class="readmore stretched-link"><span>Read More</span><i
                                     class="bi bi-arrow-right"></i></a>
                         </div>
                     </div>
