--- a/templates/main/includes/hero.html
+++ b/templates/main/includes/hero.html
@@ -5,10 +5,11 @@
     <div class="info d-flex align-items-center">
         <div class="container">
             <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
-                <div class="col-lg-6 text-center">
-                    <h2>DRN AHŞAP ATÖLYESİNE HOŞ GELDİNİZ!</h2>
+                <div class="col-lg-8 text-center">
+                    <h2>DRN AHŞAP ATÖLYESİ HOŞ GELDİNİZ!</h2>
+
                     <p>Ölçünüze, tarzınıza, bütçenize özel tasarım ve üretim.</p>
-                    <a href="#get-started" class="btn-get-started">Hadi başlayalım</a>
+                    <a href="#get-started" class="btn-get-started">Hadi taleplerini ilet</a>
                 </div>
             </div>
         </div>
