--- a/templates/main/includes/recent_blog_posts.html
+++ b/templates/main/includes/recent_blog_posts.html
@@ -33,7 +33,7 @@
                         </div>
 
                         <hr>
-                        <a href="{% url 'blog_details' %}" class="readmore stretched-link">
+                        <a href="{% url 'main:blog_details' %}" class="readmore stretched-link">
                             <span>Read More</span><i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -63,7 +63,7 @@
                         </div>
 
                         <hr>
-                        <a href="{% url 'blog_details' %}" class="readmore stretched-link">
+                        <a href="{% url 'main:blog_details' %}" class="readmore stretched-link">
                             <span>Read More</span><i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -93,7 +93,7 @@
                         </div>
 
                         <hr>
-                        <a href="{% url 'blog_details' %}" class="readmore stretched-link">
+                        <a href="{% url 'main:blog_details' %}" class="readmore stretched-link">
                             <span>Read More</span><i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
