--- a/templates/main/includes/alt_services.html
+++ b/templates/main/includes/alt_services.html
@@ -16,7 +16,7 @@
                 <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
                     <i class="bi bi-easel flex-shrink-0"></i>
                     <div>
-                        <h4><a href="{% url 'services' %}" class="stretched-link">Lorem Ipsum</a></h4>
+                        <h4><a href="{% url 'main:services' %}" class="stretched-link">Lorem Ipsum</a></h4>
                         <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati
                             cupiditate non provident</p>
                     </div>
@@ -25,7 +25,7 @@
                 <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
                     <i class="bi bi-patch-check flex-shrink-0"></i>
                     <div>
-                        <h4><a href="{% url 'services' %}" class="stretched-link">Nemo Enim</a></h4>
+                        <h4><a href="{% url 'main:services' %}" class="stretched-link">Nemo Enim</a></h4>
                         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
                             voluptatum deleniti atque</p>
                     </div>
@@ -34,7 +34,7 @@
                 <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="500">
                     <i class="bi bi-brightness-high flex-shrink-0"></i>
                     <div>
-                        <h4><a href="{% url 'services' %}" class="stretched-link">Dine Pad</a></h4>
+                        <h4><a href="{% url 'main:services' %}" class="stretched-link">Dine Pad</a></h4>
                         <p>Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt
                             minus aut eligendi omnis</p>
                     </div>
@@ -43,7 +43,7 @@
                 <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="600">
                     <i class="bi bi-brightness-high flex-shrink-0"></i>
                     <div>
-                        <h4><a href="{% url 'services' %}" class="stretched-link">Tride clov</a></h4>
+                        <h4><a href="{% url 'main:services' %}" class="stretched-link">Tride clov</a></h4>
                         <p>Est voluptatem labore deleniti quis a delectus et. Saepe dolorem libero sit non aspernatur
                             odit amet. Et eligendi</p>
                     </div>
