--- a/templates/main/includes/footer.html
+++ b/templates/main/includes/footer.html
@@ -4,7 +4,7 @@
     <div class="container footer-top">
         <div class="row gy-4">
             <div class="col-lg-4 col-md-6 footer-about">
-                <a href="{% url 'home' %}" class="logo d-flex align-items-center">
+                <a href="{% url 'main:home' %}" class="logo d-flex align-items-center">
                     <span class="sitename">UpConstruction</span>
                 </a>
                 <div class="footer-contact pt-3">
@@ -24,11 +24,11 @@
             <div class="col-lg-2 col-md-3 footer-links">
                 <h4>Useful Links</h4>
                 <ul>
-                    <li><a href="{% url 'home' %}">Home</a></li>
-                    <li><a href="{% url 'about' %}">About us</a></li>
-                    <li><a href="{% url 'services' %}">Services</a></li>
-                    <li><a href="{% url 'terms' %}">Terms of service</a></li>
-                    <li><a href="{% url 'privacy' %}">Privacy policy</a></li>
+                    <li><a href="{% url 'main:home' %}">Home</a></li>
+                    <li><a href="{% url 'main:about' %}">About us</a></li>
+                    <li><a href="{% url 'main:services' %}">Services</a></li>
+                    <li><a href="{% url 'main:terms' %}">Terms of service</a></li>
+                    <li><a href="{% url 'main:privacy' %}">Privacy policy</a></li>
                 </ul>
             </div>
 
