--- a/templates/main/includes/projects.html
+++ b/templates/main/includes/projects.html
@@ -32,7 +32,7 @@
                             <a href="{% static 'assets/img/projects/remodeling-1.jpg' %}" title="App 1"
                                data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i
                                     class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'project_details' %}" title="More Details" class="details-link"><i
+                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
                                     class="bi bi-link-45deg"></i></a>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                             <a href="{% static 'assets/img/projects/construction-1.jpg' %}" title="Product 1"
                                data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
                                     class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'project_details' %}" title="More Details" class="details-link"><i
+                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
                                     class="bi bi-link-45deg"></i></a>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
                             <a href="{% static 'assets/img/projects/repairs-1.jpg' %}" title="Branding 1"
                                data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
                                     class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'project_details' %}" title="More Details" class="details-link"><i
+                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
                                     class="bi bi-link-45deg"></i></a>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                             <a href="{% static 'assets/img/projects/design-1.jpg' %}" title="Branding 1"
                                data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i
                                     class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'project_details' %}" title="More Details" class="details-link"><i
+                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
                                     class="bi bi-link-45deg"></i></a>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                             <a href="{% static 'assets/img/projects/remodeling-2.jpg' %}" title="App 2"
                                data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i
                                     class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'project_details' %}" title="More Details" class="details-link"><i
+                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
                                     class="bi bi-link-45deg"></i></a>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                             <a href="{% static 'assets/img/projects/construction-2.jpg' %}" title="Product 2"
                                data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
                                     class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'project_details' %}" title="More Details" class="details-link"><i
+                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
                                     class="bi bi-link-45deg"></i></a>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                             <a href="{% static 'assets/img/projects/repairs-2.jpg' %}" title="Branding 2"
                                data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
                                     class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'project_details' %}" title="More Details" class="details-link"><i
+                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
                                     class="bi bi-link-45deg"></i></a>
                         </div>
                     </div>
@@ -140,7 +140,7 @@
                             <a href="{% static 'assets/img/projects/design-2.jpg' %}" title="Branding 2"
                                data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i
                                     class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'project_details' %}" title="More Details" class="details-link"><i
+                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
                                     class="bi bi-link-45deg"></i></a>
                         </div>
                     </div>
@@ -156,7 +156,7 @@
                             <a href="{% static 'assets/img/projects/remodeling-3.jpg' %}" title="App 3"
                                data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i
                                     class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'project_details' %}" title="More Details" class="details-link"><i
+                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
                                     class="bi bi-link-45deg"></i></a>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                             <a href="{% static 'assets/img/projects/construction-3.jpg' %}" title="Product 3"
                                data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
                                     class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'project_details' %}" title="More Details" class="details-link"><i
+                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
                                     class="bi bi-link-45deg"></i></a>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                             <a href="{% static 'assets/img/projects/repairs-3.jpg' %}" title="Branding 3"
                                data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
                                     class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'project_details' %}" title="More Details" class="details-link"><i
+                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
                                     class="bi bi-link-45deg"></i></a>
                         </div>
                     </div>
@@ -202,7 +202,7 @@
                             <a href="{% static 'assets/img/projects/design-3.jpg' %}" title="Branding 3"
                                data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i
                                     class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'project_details' %}" title="More Details" class="details-link"><i
+                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
                                     class="bi bi-link-45deg"></i></a>
                         </div>
                     </div>
