--- a/templates/main/includes/services.html
+++ b/templates/main/includes/services.html
@@ -19,7 +19,7 @@
                     <h3>Nesciunt Mete</h3>
                     <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure
                         perferendis tempore et consequatur.</p>
-                    <a href="{% url 'services' %}" class="readmore stretched-link">Read more <i
+                    <a href="{% url 'main:services' %}" class="readmore stretched-link">Read more <i
                             class="bi bi-arrow-right"></i></a>
                 </div>
             </div><!-- End Service Item -->
@@ -32,7 +32,7 @@
                     <h3>Eosle Commodi</h3>
                     <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non
                         ut nesciunt dolorem.</p>
-                    <a href="{% url 'services' %}" class="readmore stretched-link">Read more <i
+                    <a href="{% url 'main:services' %}" class="readmore stretched-link">Read more <i
                             class="bi bi-arrow-right"></i></a>
                 </div>
             </div><!-- End Service Item -->
@@ -45,7 +45,7 @@
                     <h3>Ledo Markt</h3>
                     <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas
                         adipisci eos earum corrupti.</p>
-                    <a href="{% url 'services' %}" class="readmore stretched-link">Read more <i
+                    <a href="{% url 'main:services' %}" class="readmore stretched-link">Read more <i
                             class="bi bi-arrow-right"></i></a>
                 </div>
             </div><!-- End Service Item -->
@@ -58,7 +58,7 @@
                     <h3>Asperiores Commodit</h3>
                     <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit
                         provident adipisci neque.</p>
-                    <a href="{% url 'services' %}" class="readmore stretched-link">Read more <i
+                    <a href="{% url 'main:services' %}" class="readmore stretched-link">Read more <i
                             class="bi bi-arrow-right"></i></a>
                 </div>
             </div><!-- End Service Item -->
@@ -71,7 +71,7 @@
                     <h3>Velit Doloremque</h3>
                     <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at
                         autem alias eius labore.</p>
-                    <a href="{% url 'services' %}" class="readmore stretched-link">Read more <i
+                    <a href="{% url 'main:services' %}" class="readmore stretched-link">Read more <i
                             class="bi bi-arrow-right"></i></a>
                 </div>
             </div><!-- End Service Item -->
@@ -84,7 +84,7 @@
                     <h3>Dolori Architecto</h3>
                     <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti
                         recusandae ducimus enim.</p>
-                    <a href="{% url 'services' %}" class="readmore stretched-link">Read more <i
+                    <a href="{% url 'main:services' %}" class="readmore stretched-link">Read more <i
                             class="bi bi-arrow-right"></i></a>
                 </div>
             </div><!-- End Service Item -->
