feat: update some files

--- a/templates/main/includes/constructions.html
+++ b/templates/main/includes/constructions.html
@@ -3,9 +3,11 @@
 
     <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
-        <h2>Constructions</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-    </div><!-- End Section Title -->
+        <h2>Neler Yapıyoruz</h2>
+        <p>DRN Ahşap Atölyesi olarak mekânınıza ve ihtiyacınıza özel tasarlıyor, üretiyor ve anahtar teslim
+            uyguluyoruz.</p>
+    </div>
+    <!-- End Section Title -->
 
     <div class="container">
         <div class="row gy-4">
@@ -15,15 +17,14 @@
                     <div class="row">
                         <div class="col-xl-5">
                             <div class="card-bg">
-                                <img src="{% static 'assets/img/constructions-1.jpg' %}" alt="Construction 1">
+                                <img src="{% static 'assets/img/constructions/constructions-1.jpg' %}" alt="">
                             </div>
                         </div>
                         <div class="col-xl-7 d-flex align-items-center">
                             <div class="card-body">
-                                <h4 class="card-title">Eligendi omnis sunt veritatis.</h4>
-                                <p>Fuga in dolorum et iste et culpa. Commodi possimus nesciunt modi voluptatem placeat
-                                    deleniti adipisci. Cum delectus doloribus non veritatis. Officia temporibus illo
-                                    magnam. Dolor eos et.</p>
+                                <h4 class="card-title">Tasarım &amp; Projelendirme</h4>
+                                <p>İhtiyaçlarınızı dinleyip ölçü alıyoruz; mekâna uygun 3D tasarım ve teknik çizimleri
+                                    hazırlıyoruz. Malzeme, fonksiyon ve bütçeyi birlikte optimize ediyoruz.</p>
                             </div>
                         </div>
                     </div>
@@ -35,15 +36,14 @@
                     <div class="row">
                         <div class="col-xl-5">
                             <div class="card-bg">
-                                <img src="{% static 'assets/img/constructions-2.jpg' %}" alt="Construction 2">
+                                <img src="{% static 'assets/img/constructions/constructions-2.jpg' %}" alt="">
                             </div>
                         </div>
                         <div class="col-xl-7 d-flex align-items-center">
                             <div class="card-body">
-                                <h4 class="card-title">Possimus ut sed velit assumenda</h4>
-                                <p>Sunt deserunt maiores voluptatem autem est rerum perferendis rerum blanditiis. Est
-                                    laboriosam qui iste numquam laboriosam voluptatem architecto. Est laudantium sunt at
-                                    quas aut hic. Eum dignissimos.</p>
+                                <h4 class="card-title">Uygulama &amp; Montaj</h4>
+                                <p>Atölyemizde üretimi tamamlanan mobilyaları termin planına uygun olarak sahada monte
+                                    ediyor, detaylı kalite kontrol sonrası anahtar teslim teslim ediyoruz.</p>
                             </div>
                         </div>
                     </div>
@@ -55,15 +55,14 @@
                     <div class="row">
                         <div class="col-xl-5">
                             <div class="card-bg">
-                                <img src="{% static 'assets/img/constructions-3.jpg' %}" alt="Construction 3">
+                                <img src="{% static 'assets/img/constructions/constructions-3.jpg' %}" alt="">
                             </div>
                         </div>
                         <div class="col-xl-7 d-flex align-items-center">
                             <div class="card-body">
-                                <h4 class="card-title">Error beatae dolor inventore aut</h4>
-                                <p>Dicta porro nobis. Velit cum in. Nesciunt dignissimos enim molestiae facilis numquam
-                                    quae quaerat ipsam omnis. Neque debitis ipsum at architecto officia laboriosam odit.
-                                    Ut sunt temporibus nulla culpa.</p>
+                                <h4 class="card-title">Tadilat &amp; Yenileme</h4>
+                                <p>Mevcut alanları işlev kaybı olmadan yeniliyoruz. Demontaj, onarım ve güncelleme
+                                    süreçlerini hızlı ve temiz yürütüyoruz.</p>
                             </div>
                         </div>
                     </div>
@@ -75,15 +74,14 @@
                     <div class="row">
                         <div class="col-xl-5">
                             <div class="card-bg">
-                                <img src="{% static 'assets/img/constructions-4.jpg' %}" alt="Construction 4">
+                                <img src="{% static 'assets/img/constructions/constructions-4.jpg' %}" alt="">
                             </div>
                         </div>
                         <div class="col-xl-7 d-flex align-items-center">
                             <div class="card-body">
-                                <h4 class="card-title">Expedita voluptas ut ut nesciunt</h4>
-                                <p>Aut est quidem doloremque voluptatem magnam quis excepturi vero quia. Eum eos
-                                    doloremque architecto illo at beatae dolore. Fugiat suscipit et sint ratione
-                                    dolores. Aut aliquid ea dolores libero nobis.</p>
+                                <h4 class="card-title">Özel Mobilya &amp; Ahşap Uygulamalar</h4>
+                                <p>Mutfağınızdan giyinme odanıza, kapıdan merdivene kadar ölçünüze özel üretimler
+                                    yapıyoruz. Doğal dokuyu kaliteyle buluşturuyoruz.</p>
                             </div>
                         </div>
                     </div>
@@ -93,4 +91,4 @@
         </div>
     </div>
 
-</section><!-- /Constructions Section -->
+</section>
