feat: update some files

--- a/templates/main/includes/projects.html
+++ b/templates/main/includes/projects.html
@@ -1,218 +1,93 @@
 {% load static %}
-<!-- Projects Section -->
+
 <section id="projects" class="projects section">
 
-    <!-- Section Title -->
-    <div class="container section-title" data-aos="fade-up">
-        <h2>Projects</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-    </div><!-- End Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Projelerimiz</h2>
+    <p>Atölyemizden seçtiğimiz bazı çalışmalar.</p>
+  </div>
 
-    <div class="container">
+  <div class="container">
 
-        <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
-
-            <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-                <li data-filter="*" class="filter-active">All</li>
-                <li data-filter=".filter-remodeling">Remodeling</li>
-                <li data-filter=".filter-construction">Construction</li>
-                <li data-filter=".filter-repairs">Repairs</li>
-                <li data-filter=".filter-design">Design</li>
-            </ul><!-- End Portfolio Filters -->
-
-            <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-remodeling">
-                    <div class="portfolio-content h-100">
-                        <img src="{% static 'assets/img/projects/remodeling-1.jpg' %}" class="img-fluid"
-                             alt="Remodeling 1">
-                        <div class="portfolio-info">
-                            <h4>App 1</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur</p>
-                            <a href="{% static 'assets/img/projects/remodeling-1.jpg' %}" title="App 1"
-                               data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i
-                                    class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
-                                    class="bi bi-link-45deg"></i></a>
-                        </div>
-                    </div>
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-construction">
-                    <div class="portfolio-content h-100">
-                        <img src="{% static 'assets/img/projects/construction-1.jpg' %}" class="img-fluid"
-                             alt="Construction 1">
-                        <div class="portfolio-info">
-                            <h4>Product 1</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur</p>
-                            <a href="{% static 'assets/img/projects/construction-1.jpg' %}" title="Product 1"
-                               data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
-                                    class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
-                                    class="bi bi-link-45deg"></i></a>
-                        </div>
-                    </div>
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-repairs">
-                    <div class="portfolio-content h-100">
-                        <img src="{% static 'assets/img/projects/repairs-1.jpg' %}" class="img-fluid" alt="Repairs 1">
-                        <div class="portfolio-info">
-                            <h4>Branding 1</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur</p>
-                            <a href="{% static 'assets/img/projects/repairs-1.jpg' %}" title="Branding 1"
-                               data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
-                                    class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
-                                    class="bi bi-link-45deg"></i></a>
-                        </div>
-                    </div>
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-design">
-                    <div class="portfolio-content h-100">
-                        <img src="{% static 'assets/img/projects/design-1.jpg' %}" class="img-fluid" alt="Design 1">
-                        <div class="portfolio-info">
-                            <h4>Books 1</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur</p>
-                            <a href="{% static 'assets/img/projects/design-1.jpg' %}" title="Branding 1"
-                               data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i
-                                    class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
-                                    class="bi bi-link-45deg"></i></a>
-                        </div>
-                    </div>
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-remodeling">
-                    <div class="portfolio-content h-100">
-                        <img src="{% static 'assets/img/projects/remodeling-2.jpg' %}" class="img-fluid"
-                             alt="Remodeling 2">
-                        <div class="portfolio-info">
-                            <h4>App 2</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur</p>
-                            <a href="{% static 'assets/img/projects/remodeling-2.jpg' %}" title="App 2"
-                               data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i
-                                    class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
-                                    class="bi bi-link-45deg"></i></a>
-                        </div>
-                    </div>
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-construction">
-                    <div class="portfolio-content h-100">
-                        <img src="{% static 'assets/img/projects/construction-2.jpg' %}" class="img-fluid"
-                             alt="Construction 2">
-                        <div class="portfolio-info">
-                            <h4>Product 2</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur</p>
-                            <a href="{% static 'assets/img/projects/construction-2.jpg' %}" title="Product 2"
-                               data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
-                                    class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
-                                    class="bi bi-link-45deg"></i></a>
-                        </div>
-                    </div>
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-repairs">
-                    <div class="portfolio-content h-100">
-                        <img src="{% static 'assets/img/projects/repairs-2.jpg' %}" class="img-fluid" alt="Repairs 2">
-                        <div class="portfolio-info">
-                            <h4>Branding 2</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur</p>
-                            <a href="{% static 'assets/img/projects/repairs-2.jpg' %}" title="Branding 2"
-                               data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
-                                    class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
-                                    class="bi bi-link-45deg"></i></a>
-                        </div>
-                    </div>
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-design">
-                    <div class="portfolio-content h-100">
-                        <img src="{% static 'assets/img/projects/design-2.jpg' %}" class="img-fluid" alt="Design 2">
-                        <div class="portfolio-info">
-                            <h4>Books 2</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur</p>
-                            <a href="{% static 'assets/img/projects/design-2.jpg' %}" title="Branding 2"
-                               data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i
-                                    class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
-                                    class="bi bi-link-45deg"></i></a>
-                        </div>
-                    </div>
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-remodeling">
-                    <div class="portfolio-content h-100">
-                        <img src="{% static 'assets/img/projects/remodeling-3.jpg' %}" class="img-fluid"
-                             alt="Remodeling 3">
-                        <div class="portfolio-info">
-                            <h4>App 3</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur</p>
-                            <a href="{% static 'assets/img/projects/remodeling-3.jpg' %}" title="App 3"
-                               data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i
-                                    class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
-                                    class="bi bi-link-45deg"></i></a>
-                        </div>
-                    </div>
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-construction">
-                    <div class="portfolio-content h-100">
-                        <img src="{% static 'assets/img/projects/construction-3.jpg' %}" class="img-fluid"
-                             alt="Construction 3">
-                        <div class="portfolio-info">
-                            <h4>Product 3</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur</p>
-                            <a href="{% static 'assets/img/projects/construction-3.jpg' %}" title="Product 3"
-                               data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
-                                    class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
-                                    class="bi bi-link-45deg"></i></a>
-                        </div>
-                    </div>
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-repairs">
-                    <div class="portfolio-content h-100">
-                        <img src="{% static 'assets/img/projects/repairs-3.jpg' %}" class="img-fluid" alt="Repairs 3">
-                        <div class="portfolio-info">
-                            <h4>Branding 3</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur</p>
-                            <a href="{% static 'assets/img/projects/repairs-3.jpg' %}" title="Branding 3"
-                               data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
-                                    class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
-                                    class="bi bi-link-45deg"></i></a>
-                        </div>
-                    </div>
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-design">
-                    <div class="portfolio-content h-100">
-                        <img src="{% static 'assets/img/projects/design-3.jpg' %}" class="img-fluid" alt="Design 3">
-                        <div class="portfolio-info">
-                            <h4>Books 3</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur</p>
-                            <a href="{% static 'assets/img/projects/design-3.jpg' %}" title="Branding 3"
-                               data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i
-                                    class="bi bi-zoom-in"></i></a>
-                            <a href="{% url 'main:project_details' %}" title="More Details" class="details-link"><i
-                                    class="bi bi-link-45deg"></i></a>
-                        </div>
-                    </div>
-                </div><!-- End Portfolio Item -->
-
-            </div><!-- End Portfolio Container -->
-
-        </div>
-
+    {# Kategoriler varsa filtreleri göster #}
+    <div id="project-filters">
+      {% include "main/includes/projects_filters.html" with categories=categories only %}
     </div>
 
+    {# Ana sayfada home_projects, sayfa görünümünde projects değişkeni gelir #}
+    <div id="projects-grid">
+      {% include "main/includes/projects_grid.html" with projects=home_projects|default:projects only %}
+    </div>
+
+  </div>
+
 </section>
-<!-- /Projects Section -->
+
+{# --- AJAX: sadece bu bölümün altına ekle --- #}
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+  const grid = document.getElementById("projects-grid");
+  const filters = document.getElementById("project-filters");
+
+  if (!grid || !filters) return;
+
+  // Filtre linklerine tıklandığında sayfa değiştirme; yalnız grid'i yenile
+  filters.addEventListener("click", async function(e) {
+    const a = e.target.closest("a");
+    if (!a) return;
+
+    // Yalnızca kategori linklerini yakala (href=.../projects/?category=...)
+    const href = a.getAttribute("href") || "";
+    if (!href.includes("{% url 'main:projects' %}")) return;
+
+    e.preventDefault();
+
+    // URL'deki ?category=... paramını al
+    const url = new URL(href, window.location.origin);
+    const cat = url.searchParams.get("category") || "";
+
+    // Partial endpoint'ini hazırla
+    const partial = new URL("{% url 'main:projects_partial' %}", window.location.origin);
+    if (cat) partial.searchParams.set("category", cat);
+
+    // Loading efekti
+    grid.style.opacity = "0.6";
+
+    try {
+      const res = await fetch(partial, {headers: {"X-Requested-With": "fetch"}});
+      const html = await res.text();
+      grid.innerHTML = html;
+
+      // Adres çubuğunu güncelle (geri/ileri çalışsın)
+      const full = new URL("{% url 'main:projects' %}", window.location.origin);
+      if (cat) full.searchParams.set("category", cat);
+      history.pushState({category: cat}, "", full);
+
+      // Aktif sekmeyi sınıflandır (filter-active)
+      // projects_filters.html içinde aktif class'ı server-side veriyorduk;
+      // front-end'de de hızlıca güncelleyelim:
+      filters.querySelectorAll("a").forEach(x => x.classList.remove("filter-active"));
+      a.classList.add("filter-active");
+    } finally {
+      grid.style.opacity = "1";
+    }
+  });
+
+  // Back/forward destekle
+  window.addEventListener("popstate", async (e) => {
+    const cat = (e.state && e.state.category) || (new URL(location.href)).searchParams.get("category") || "";
+    const partial = new URL("{% url 'main:projects_partial' %}", window.location.origin);
+    if (cat) partial.searchParams.set("category", cat);
+    const res = await fetch(partial);
+    grid.innerHTML = await res.text();
+
+    // Aktif class
+    const activeHrefBase = "{% url 'main:projects' %}";
+    filters.querySelectorAll("a").forEach(x => {
+      const xurl = new URL(x.getAttribute("href"), window.location.origin);
+      const xcat = xurl.searchParams.get("category") || "";
+      x.classList.toggle("filter-active", xurl.pathname === activeHrefBase && xcat === cat);
+    });
+  });
+});
+</script>
