--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -16,10 +16,10 @@
     {% include "main/includes/services.html" %}
 
     {# Alt Services Section #}
-    {% include "main/includes/alt_services.html" %}
+   <!-- { include "main/includes/alt_services.html" %}
 
     {# Features Section #}
-    {% include "main/includes/features.html" %}
+    { include "main/includes/features.html" %} -->
 
     {# Projects Section #}
     {% include "main/includes/projects.html" %}
